syntax = "proto3";

package synasishouse.api;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ymanshur/synasishouse/pb";

message Product {
  string id = 1;
  string code = 2;
  int32 total = 3;
  int32 reserved = 4;
  google.protobuf.Timestamp updated_at = 5;
  google.protobuf.Timestamp created_at = 6;
}


