syntax = "proto3";

package synasishouse.api;

import "product.proto";

option go_package = "github.com/ymanshur/synasishouse/proto";

message CreateProductRequest {
  string code = 1;
  int32 total = 2;
}

message GetProductRequest {
  string id = 1;
}

message UpdateProductRequest {
  string code = 1;
  string id = 2;
}

message ProductResponse {
  Product product = 1;
}
